# second-reality-TELNET

./: .gitignore  README.md  pyproject.toml
assets/: 20forbeers_advert.ans  20forbeers_advert.cp437.ans
deploy/: srtelnet.service
docs/: bake.md  credits.md  deploy.md  operations.md  performance-tuning.md
src/srtelnet/: __init__.py  server.py
tools/: bake_frames.py  play.py  stats.sh  stats25.sh  switch_fps.sh
